22Feb03=======================================================================
1. changed qrz.com address 
2. added Charlie's [K1XX] new wpxloc.raw data stuff to get WA1, KC3 type 
callsigns to work better.
3. Merged in the new (faster) DXUser.pm.

[NOTE] this version will require Storable to be installed. On the
other hand the code may work without, in a compatible way. This bit hasn't 
been very well tested (the 'no Storable' condition that is). 

[*** NOTE ***] make sure that you do an 'export_user' BEFORE restarting
you node. (Yes I know this is like a shrinkwrap licence, but I can't
help it).

It will take several minutes for the node to restart when it does the 
conversion from .v2 to .v3 user file. Please go and have a good strong cup
of tea whilst this is happening.

If it fails then you will need to edit your latest user_asc file on (or about)
line 25 it says: $ref = decode($f[1]); you will need to change that to 
$ref = asc_decode($f[1]); and then do: perl user_asc
 
21Feb03=======================================================================
1. moved the export of the users file to Wednesday night (GMT) to avoid 
possible crashes and/or delays during a contest weekend.
14Feb03=======================================================================
1. some major changes to the structure of the manual documentation.  To bring
the manuals into line, they now have the language tag (like 
installation_en.html).  Hopefully someone will translate the manuals 
eventually :-) I have left the old files in CVS for now to allow
everyone to change any symlinks etc to the new filenames.  I will remove the
old files shortly, please update your links! (g0vgs)
2. docs makefile updated and commands2sgml.pl added from M0AZM.  This script
inserts the helpfiles automagically from Commands_en.hlp into the relevant
manuals. (g0vgs)
3. Commands_en.hlp adjusted slightly to ensure at least one space before
examples for the purposes of the above script. (g0vgs)