@@ -286,6 +286,8 @@ package DXM;
 				unsethop1 => 'usage: unset/hops <call> ann|spots|wwv|wcy',
 				unsethop2 => 'hops unset on $_[1] for $_[0]', 
 				usernf => '*** User record for $_[0] not found ***',
+				usstates => 'US State display enabled for $_[0]',
+				usstateu => 'US State display disabled for $_[0]',
 				wcy1 => '$_[0] is missing or out of range',
 				wcy2 => 'Duplicate WCY',
                 wcys => 'WCY enabled for $_[0]',
