@@ -2,7 +2,9 @@
 1. changed qrz.com address 
 2. added Charlie's [K1XX] new wpxloc.raw data stuff to get WA1, KC3 type 
 callsigns to work better.
-3. Merged in the new (faster) DXUser.pm.
+3. added in set/usstate command which prints any US state information 
+available on both the spotted (LHS of time) and spotter (RHS of time).
+4. Merged in the new (faster) DXUser.pm.
 
 [NOTE] this version will require Storable to be installed. On the
 other hand the code may work without, in a compatible way. This bit hasn't 
@@ -20,6 +22,8 @@ If it fails then you will need to edit your latest user_asc file on (or about)
 line 25 it says: $ref = decode($f[1]); you will need to change that to 
 $ref = asc_decode($f[1]); and then do: perl user_asc
  
+DO MAKE SURE THAT you include subdirectories in your CVS update 
+
 21Feb03=======================================================================
 1. moved the export of the users file to Wednesday night (GMT) to avoid 
 possible crashes and/or delays during a contest weekend.
